wrap the form in a div located in the footer and fix the value in the modal window

--- a/css/styles.css
+++ b/css/styles.css
@@ -643,12 +643,17 @@ justify-content: space-between;
 align-items: center;
 position: relative;
 min-width: 453px;
+gap: 24px;
 }
 
 
 .title-form {
 color: #fff;
 margin-bottom: 16px;
+font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
 }
 
@@ -661,6 +666,14 @@ border: 1px solid #fff;
     background-color: transparent;
     color: #fff;
     padding: 8px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+}
+
+.input-email::placeholder {
+    color: #ffffff;
 
 }
 
@@ -674,7 +687,15 @@ border: 1px solid #fff;
 
 .button-footer {
 display: flex;
-justify-content: space-between;
+justify-content: center;
+align-items: center;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
@@ -706,6 +727,10 @@ color: #fff;
 
 }
 
+.footer-form-icon {
+    margin-left: 16px;
+    fill: #fff;
+}
 
 
 
@@ -727,7 +752,7 @@ align-items: center;
 
 opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms ease-in-out;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -738,15 +763,19 @@ opacity: 1;
 .popup-contacts {
 width: 408px;
 height: 80%;
-max-height: 584px;
+min-height: 584px;
 box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
 background-color: #FCFCFC;
 overflow-y: auto;
 margin: 0 auto;
 padding: 72px 24px 24px;
 border-radius: 4px;
-position: relative;
 overflow: auto ;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-popup {
@@ -755,17 +784,16 @@ overflow: auto ;
     right: 24px;
     width: 24px;
     height: 24px;
-    border-radius: 100%;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0;
     cursor: pointer;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #E7E9FC;
     fill: #2E2F42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .close-popup:hover,
 .close-popup:focus {
@@ -775,9 +803,7 @@ fill: #fff;
 }
 
 .close-popup-icon {
-
-  
-
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -801,6 +827,15 @@ fill: #fff;
 .form-field-wrapper {
     margin-bottom: 8px;
 }
+
+ .form-field-wrapper-policy       {
+margin-bottom: 24px;
+}
+
+.form-field-wrapper-coment {
+    margin-bottom: 16px;
+} 
+
 .field-wrapper {
     position: relative;
 }
@@ -811,6 +846,7 @@ fill: #fff;
         width: 100%;
         height: 40px;
         background-color: transparent;
+        outline: transparent;
         padding-left: 38px;
         color: #2E2F42;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -827,9 +863,11 @@ fill: #fff;
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .text-field:focus + .field-icon {
+
     fill: #4D5AE5;
 }
 
@@ -838,7 +876,7 @@ fill: #fff;
 display: block;
 font-weight: 400;
     font-size: 12px;
-    line-height: 1.7;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
     margin-bottom: 4px;
@@ -847,12 +885,17 @@ font-weight: 400;
 .comment-textarea {
 border: 1px solid rgba(46, 47, 66, 0.4);
 padding: 8px 16px;
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     width: 100%;
     height: 120px;
     resize: none;
     background-color: transparent;
-    outline: none;
+    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -872,7 +915,7 @@ border-color: #4D5AE5;
 .policy-text {
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8E8F99;
 }
@@ -903,8 +946,8 @@ border-color: #4D5AE5;
     height: 16px;
     border-radius: 2px;
     background-color: #404BBF;
-    border: 1px solid #404BBF;
     fill: #F4F4FD;
+    border: none;
 }
 
 .policy-link {
@@ -917,13 +960,20 @@ border-color: #4D5AE5;
 .popup-send {
     border-radius: 4px;
         padding: 16px 32px;
-        width: 169px;
+        min-width: 169px;
         height: 56px;
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            text-align: center;
+            cursor: pointer;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
             background-color: #4D5AE5;
             border: none;
             color: #fff;
             margin: 0 auto;
+            
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
